Bug 124543 - Component icon has a black background
Summary: Component icon has a black background
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
: 124683 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-04-04 09:52 UTC by Xisco Faulí
Modified: 2019-06-14 14:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (19.07 KB, image/png)
2019-04-04 09:52 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2019-04-04 09:52:29 UTC
Created attachment 150523 [details]
screenshot

See the image attached

Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: c8c0292c2152df8c353aeff32896f0cfa8a53a64
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xisco Faulí 2019-04-04 09:53:36 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=86ea64f216819696cd86d1926aff0a138ace2baf

author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2019-02-15 13:14:32 +0100
committer	Tomaž Vajngerl <quikee@gmail.com>	2019-04-03 11:57:08 +0200
commit 86ea64f216819696cd86d1926aff0a138ace2baf (patch)
tree db513803abc9dc255d27c0f08cba6d6d0c9ef1d9
parent 994b41a6c69d20637dcb95894c385f5c0102d600 (diff)
Support for native 32bit Bitmap in VCL and SVP (cairo) backend

Bisected with: bibisect-linux64-6.3

Adding Cc: to Tomaž Vajngerl
Comment 2 Tomaz Vajngerl 2019-04-12 16:03:35 UTC
*** Bug 124683 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2019-04-13 02:24:10 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/962debec1fa1c51d3eef96ca3432976ecfc0aa94%5E%21

tdf#124543 add functs. to scale 32bit bitmaps to BitmapScaleSuper

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2019-04-13 07:05:15 UTC
Black glitches in slide preview are gone

Arch Linux 64-bit
Version: 6.3.0.0.alpha0+
Build ID: cb523c9b12dce59e2df00a4fb1a8ec33e8206407
CPU threads: 8; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 13 April 2019
Comment 5 Xisco Faulí 2019-04-15 10:43:50 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 0eaa0804085dd6e93257dd31361490720456679d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Tomaž Vajngerl, thanks for fixing this issue!!