tdf#124543 add functs. to scale 32bit bitmaps to BitmapScaleSuper

We still miss the support in other function however.

Change-Id: Ie87b588a9f8826242f4cff9d6671c98f3407f0e3